<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome!</string>
    <string name="title_activity_add_task">AddTask</string>
    <string name="buttonAddTask">Add a new task</string>
    <string name="buttonViewAllTasks">View all tasks</string>
    <string name="buttonViewCompatibleTasks">View compatible tasks</string>
    <string name="buttonRunningTask">View current TO DO Task</string>
    <string name="buttonSetSchedule">Set fixed Schedule</string>
    <string name="buttonSuggestSchedule">Suggest Schedule</string>
    <string name="buttonDetectDevices">Detect devices</string>
    <string name="buttonChangeDevicesValues">Change Devices Data</string>
    <string name="domain">Choose a domain</string>
    <string name="country_prompt">Choose a domain</string>

    <string-array name="country_arrays">
        <item>Sport</item>
        <item>Bill pay</item>
        <item>Shopping</item>
        <item>Work</item>
        <item>Studying</item>
        <item>Travelling</item>
        <item>Art</item>
        <item>House Managing</item>
        <item>Reading</item>
        <item>Meeting</item>
        <item>Conversation</item>
        <item>Other</item>
    </string-array>

    <string name="textPriority">Priority</string>
    <string name="priority_prompt">Choose a Priority</string>

    <string-array name="priority_arrays">
        <item>Minor</item>
        <item>Average</item>
        <item>Major</item>
        <item>Critical</item>
        <item>Unknown</item>
    </string-array>

    <string name="textDuration_prompt">Choose a Duration</string>

    <string-array name="duration_arrays">
        <item>Unknown</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>one hour</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>8 hours</item>
        <item>16 hours</item>
        <item>one day</item>
        <item>two days</item>
        <item>four days</item>
    </string-array>

    <string name="Repeatable">How often does it repeat</string>
    <string name="repeatable_prompt">Choose how often does it repeat</string>

    <string-array name="repeatable_arrays">
        <item>It does not</item>
        <item>daily</item>
        <item>weekly</item>
        <item>monthly</item>
        <item>Unknown</item>
    </string-array>

    <string name="textStartTime">The earliest time when the execution should have started</string>
    <string name="TextEndTime">The latest time when the execution should have ended</string>
    <string name="textViewTitle">Title</string>
    <string name="textAddLocation">Location</string>
    <string name="chooseObject">OBJECTS</string>
    <string name="buttonSetDeadline">Deadline</string>
    <string name="buttonChoosePeople">People</string>
    <string name="buttonChooseDevices">Devices</string>
    <string name="Duration">Duration</string>
    <string name="buttonDuration">Calculate duration</string>
    <string name="saveButton">SAVE TASK</string>
    <string name="title_activity_show_tasks">View compatible tasks</string>
    <string name="taskTitle">TITLE</string>
    <string name="title_activity_incercare">INCERCARE</string>
    <string name="Distance">Distance</string>
    <string name="ERASE">ERASE TASK</string>
    <string name="Modify">Modify Task</string>
    <string name="title_activity_add_device">AddDeviceActivity</string>
    <string name="DeviceName">Device Name</string>
    <string name="MacAdress">Mac Address</string>
    <string name="addOwner">Add Owner</string>
    <string name="textViewOwner">Owner</string>
    <string name="buttonAddOwnerDevice">Add Device with the added owner</string>
    <string name="buttonAddMyDevice">Add Device as mine</string>
    <string name="buttonSaveMyDevice">Save Device as mine</string>
    <string name="buttonSaveNewOwnerDevice">Save new owner</string>
    <string name="buttonEraseDevice">Erase device</string>
    <string name="myDeviceConstant">My Device</string>
    <string name="noDevice">No new Devices have been detected</string>
    <string name="Succes">The data has been inserted  </string>
    <string name="UPDATEMessage">The data has been updated  </string>
    <string name="Error">Please insert the :</string>
    <string name="textNotChoosed">Not Chosen</string>
    <string name="title_activity_show_all_tasks">View all tasks</string>
    <string name="title_activity_show_current_task">View Current tasks</string>
    <string name="buttonSearch">Search</string>
    <string name="addMinutes"> Add 10 minutes</string>
    <string name="addHours"> Add one hour</string>
    <string name="finalizeTask"> Task finished</string>
    <string name="title_activity_set_fixed_task">SetFixedTask</string>
    <string name="buttonLeft">&lt;</string>
    <string name="buttonRight">&gt;</string>
    <string name="dayMonday">Monday</string>
    <string name="dayTuesday">Tuesday</string>
    <string name="dayWednesday">Wednesday</string>
    <string name="dayThursday">Thursday</string>
    <string name="dayFriday">Friday</string>
    <string name="title_activity_activity_scheduler">ActivityScheduler</string>
    <string name="messageCalculateSchedule">Please select the interval you want to calculate</string>
    <string name="buttonCalculateSchedule">Calculate Schedule</string>
    <string name="buttonNextInterval">Show nextInterval</string>
    <string name="messagePatience">Please be patient. This may take several days</string>
    <string name="activityChangeDeviceData">Change Device Data</string>
    <string name="title_activity_activity_change_device_data">ActivityChangeDeviceData</string>
    
    
    
    <string name="checkBoxLocation">Location</string>
    <string name="checkBoxDevices">Devices</string>
    <string name="checkBoxPeople">People</string>
    <string name="checkBoxSchedule">Schedule</string>

</resources>
