<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/currentTaskLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowCurrentTask" >
    
    
    <TextView
            android:id="@+id/nameTask"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:drawableLeft="@drawable/title"
       		android:text="@string/taskTitle" />
        

        
        
    <TextView
            android:id="@+id/addLocationTextView"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/nameTask"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:drawableLeft="@drawable/location"
        	android:text="@string/textAddLocation" />
    
    
    
     <TextView
            android:id="@+id/showDuration"
            android:layout_marginTop="10dp"
            
            android:layout_below="@+id/addLocationTextView"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/Duration" />
     
     
     <TextView 
         	android:id="@+id/hours"
         	android:layout_marginTop="10dp"
         	android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/showDuration"
            android:layout_below="@+id/addLocationTextView"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/Duration"/>
     
     
     <TextView 
         	android:id="@+id/minutes"
         	android:layout_marginTop="10dp"
         	android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/hours"
            android:layout_below="@+id/addLocationTextView"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/Duration"/>
     
     
      <TextView 
         	android:id="@+id/seconds"
         	android:layout_marginTop="10dp"
         	android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/minutes"
            android:layout_below="@+id/addLocationTextView"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/Duration"/>
      
      
      <Button
          android:id="@+id/addMinutes"
          android:text="@string/addMinutes"
          android:layout_marginTop="10dp"
          android:layout_below="@+id/showDuration"
          android:layout_width="wrap_content"
       	  android:layout_height="wrap_content" />
      
      
       <Button
          android:id="@+id/addHours"
          android:text="@string/addHours"
          android:layout_marginTop="10dp"
          android:layout_marginLeft="10dp"
          android:layout_below="@+id/showDuration"
          android:layout_toRightOf="@+id/addMinutes"
          android:layout_width="wrap_content"
       	  android:layout_height="wrap_content" />
       
       
       
       <Button
          android:id="@+id/taskFinalizat"
          android:text="@string/finalizeTask"
          android:layout_marginTop="10dp"
          android:layout_below="@+id/addMinutes"
          android:layout_width="wrap_content"
       	  android:layout_height="wrap_content" />
      
         	
     
     
     
    
    
    
    
    
	
    

</RelativeLayout>
