<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    
    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/textViewLabelNameTask"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:drawableLeft="@drawable/title"
        	android:textSize="20sp"
        	android:text="@string/textViewTitle" />
        
        
		<AutoCompleteTextView 
		    android:id="@+id/titleAutoComplete"
		    android:layout_marginTop="10dp"
		    android:layout_marginLeft="30dp"
		    android:layout_marginRight="30dp"
		    android:layout_below="@+id/textViewLabelNameTask"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:completionThreshold="1" />
        
	
        <TextView
            android:id="@+id/textViewLabelAddLocation"
            android:layout_below="@+id/titleAutoComplete"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:drawableLeft="@drawable/location"
        	android:text="@string/textAddLocation" />
        
        
        <AutoCompleteTextView 
            android:id="@+id/locationAutoComplete"
            android:layout_below="@+id/textViewLabelAddLocation"
			android:layout_width="300dp"
			android:layout_marginLeft="30dp"
			android:layout_height="wrap_content"
			android:completionThreshold="1"
		/>
        
 		<Button
 		    
 		    android:id="@+id/buttonSearchLocation"
 		    android:layout_marginLeft="30dp"
 		    android:layout_toRightOf="@+id/locationAutoComplete"
 		    android:layout_below="@+id/textViewLabelAddLocation"
 		    android:layout_alignBottom="@+id/locationAutoComplete"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:text="@string/buttonSearch"
 		/>
        
        
       	<fragment 
  			android:id="@+id/map"
  			android:layout_below="@+id/locationAutoComplete"
  			android:layout_marginTop="20dp"
 			android:layout_width="800dp"
  			android:layout_height="500dp"
  			android:layout_centerHorizontal="true"
  			class="com.example.meniu.WorkaroundMapFragment"/>

         
         <Button
            android:id="@+id/chooseDevicesButton"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:paddingRight="35dp"
            android:textSize="20sp"
            android:drawableLeft="@drawable/device"
            android:layout_below="@+id/map"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/buttonChooseDevices" />
         
         <TextView
            android:id="@+id/chooseDevices"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/chooseDevicesButton"
            android:layout_alignBaseline="@+id/chooseDevicesButton"
            android:layout_below="@+id/map"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/textNotChoosed" />
        
         
         
	    <Button
            android:id="@+id/choosePeopleButton"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:paddingRight="45dp"
            android:textSize="20sp"
            android:layout_below="@+id/chooseDevicesButton"
            android:drawableLeft="@drawable/persoane"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/buttonChoosePeople" />
         
         
        <TextView
            android:id="@+id/choosePeopleText"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/choosePeopleButton"
            android:layout_alignBaseline="@+id/choosePeopleButton"
            android:layout_below="@+id/chooseDevicesButton"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/textNotChoosed" />
        

 
		<Button
            android:id="@+id/setDeadline"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:paddingRight="30dp"
            android:textSize="20sp"
            android:drawableLeft="@drawable/date"
            android:layout_below="@+id/choosePeopleButton"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/buttonSetDeadline" />	 
			
         
		<TextView
		    android:id="@+id/deadline"
		    android:layout_toRightOf="@+id/setDeadline"
		    android:layout_alignBaseline="@+id/setDeadline"
		    android:layout_below="@+id/choosePeopleButton"
       	    android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:layout_marginTop="20dp"
       		android:layout_marginLeft="30dp"
       		android:textAppearance="?android:attr/textAppearanceLarge"
        	android:text="@string/textNotChoosed" />
		
    
    	<TextView
  	      	android:id="@+id/priority"
  	      	android:layout_marginLeft="30dp"
  	      	android:layout_marginTop="40dp"
  	      	android:textSize="20sp"
    	  	android:layout_below="@+id/deadline"
    	  	android:drawableLeft="@drawable/warning"
        	android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
        	android:text="@string/priority_prompt" />
    
    
    	<Spinner
        	android:id="@+id/spinnerPriority"
        	android:layout_toRightOf="@+id/priority"
        	android:layout_alignBaseline="@+id/priority"
        	android:layout_below="@+id/deadline"
        	android:layout_width="200dp"
        	android:layout_marginLeft="30dp"
        	android:layout_height="wrap_content"
        	android:entries="@array/priority_arrays"
        	android:prompt="@string/priority_prompt" />
    	
    	
    	
    	<TextView
  	      	android:id="@+id/textDuration"
  	      	android:layout_marginLeft="30dp"
  	      	android:layout_marginTop="40dp"
  	      	android:textSize="20sp"
    	  	android:layout_below="@+id/priority"
    	  	android:drawableLeft="@drawable/duration"
        	android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
        	android:text="@string/textDuration_prompt" />
    
    	<Spinner
        	android:id="@+id/spinnerDuration"
        	android:layout_toRightOf="@+id/textDuration"
        	android:layout_marginLeft="20dp"
        	android:layout_alignBaseline="@+id/textDuration"
        	android:layout_below="@+id/spinnerPriority"
        	android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:entries="@array/duration_arrays"
        	android:prompt="@string/textDuration_prompt" />
     
      	
      	<Button
      	    android:id="@+id/saveButton"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:layout_centerHorizontal="true"
      	    android:layout_below="@+id/textDuration"
      	    android:layout_marginTop="40dp"
      	    android:text="@string/saveButton" />
      	
      	
      	<TextView
      	    android:id="@+id/messageInsert"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:layout_centerHorizontal="true"
      	    android:layout_below="@+id/saveButton" />

	</RelativeLayout>
	
</ScrollView>	
